--- a/docs/main.css
+++ b/docs/main.css
@@ -3,8 +3,9 @@ body {
 }
 
 .videoItem, header  {
-    width: 560px;
-    margin: 0 auto;
+    width: 100%;
+    max-width: 560px;
+    margin: auto;
     text-align: center;
     font-family: sans-serif;
     padding: 20px;
