--- a/docs/main.css
+++ b/docs/main.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
+
 body {
     background-color: rgb(134, 134, 134);
 }
@@ -7,7 +9,7 @@ body {
     max-width: 560px;
     margin: auto;
     text-align: center;
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
     padding: 20px;
     background-color: #fff;
 }
